<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey_5"
    android:orientation="vertical"
    android:padding="10.0dip"
    tools:context=".fragments.SendFeedbackFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_2sdp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbFeedback"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:checked="true"
                    android:gravity="center|left"
                    android:text="@string/feedback"
                    android:textColor="@color/menu_text_color" />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0"
                    android:id="@+id/rbComplaint"
                    android:gravity="center|left"
                    android:text="@string/complaint"
                    android:textColor="@color/menu_text_color" />
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/spacing_middle" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_large"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLines="12"
                    android:minLines="7" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginRight="-4.0dip"
                android:background="@drawable/button_background"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnWhatsApp"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginRight="-4.0dip"
                android:background="@drawable/btn_rect_teal"
                android:text="@string/contact_by_whatsapp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>


