<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.mycards.intro.IntroActivity">
    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="645dp"
        />
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="10dp"
        app:tabBackground="@drawable/tab_indicator_selector"
        app:tabIndicatorHeight="0dp" />

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView

            android:id="@+id/btSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/btGetStarted"
            android:text="@string/skip"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btGetStarted"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/bt_ui_intro"
            android:textAllCaps="false"
            android:text="@string/get_started"/>

        <TextView
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="5dp"

            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>



    </LinearLayout>

</ScrollView>